Ajustes de espaçamento

--- a/projeto-gestao-frontend-minimal/help.html
+++ b/projeto-gestao-frontend-minimal/help.html
@@ -31,7 +31,7 @@
         <a href="login.html" class="">Login/Registro</a>
       </nav>
       <hr/>
-      <div class="hint">UI estática em HTML/CSS. Conecte ao Java via JSP/Thymeleaf/Servlet.</div>
+
     </aside>
     <div>
       <header class="header">
@@ -44,20 +44,21 @@
       <main class="main">
         
 <section class="panel">
-  <h2>Ajuda</h2>
-  <p>Esta UI é estática (HTML+CSS). Conecte ao backend Java (Spring Boot/Jakarta) mapeando rotas e preenchendo os placeholders <code>data-*</code> e IDs.</p>
-  <h3>Rotas sugeridas</h3>
+  <h2>Central de Ajuda</h2>
+  <p>Bem-vindo à Central de Ajuda do Sistema de Gestão de Projetos! Aqui você encontra respostas para as dúvidas mais comuns e dicas para aproveitar ao máximo a plataforma.</p>
+  <h3>Perguntas Frequentes</h3>
   <ul>
-    <li><code>GET /login</code>, <code>POST /login</code></li>
-    <li><code>GET /projects</code>, <code>POST /projects</code>, <code>GET /projects/:id</code></li>
-    <li><code>POST /tasks</code>, <code>PUT /tasks/:id</code>, <code>DELETE /tasks/:id</code></li>
+    <li><strong>Como criar um novo projeto?</strong> <br> Acesse a aba "Projetos" e clique em "Novo Projeto". Preencha os campos obrigatórios e salve.</li>
+    <li><strong>Como atribuir tarefas?</strong> <br> No menu "Atribuição de Tarefas", selecione a tarefa e o responsável, depois clique em "Atribuir".</li>
+    <li><strong>Como visualizar o Kanban?</strong> <br> Clique na aba "Kanban" para acompanhar o andamento das tarefas em cada etapa.</li>
+    <li><strong>Como editar meu perfil?</strong> <br> Acesse "Perfil" no menu lateral e clique em "Editar Perfil".</li>
   </ul>
-  <h3>Acessibilidade</h3>
-  <p>Campos com <code>label</code>, contraste adequado, navegação por teclado.</p>
+  <h3>Suporte</h3>
+  <p>Se você não encontrou sua resposta, entre em contato com o suporte pelo e-mail <a href="mailto:suporte@gestaoprojetos.com">suporte@gestaoprojetos.com</a> ou utilize o chat interno.</p>
 </section>
 
       </main>
-      <div class="footer">© Ajuda / Documentação — UI mínima</div>
+
     </div>
   </div>
 </body>
